# qut10_jackal

./: CMakeLists.txt  QUT10_systest.py  README.md  package.xml  ros.d  setup.bash.backup
3d_models/CameraMount/: Bracket.SLDPRT  Bracket.STL  CameraMountPlate.SLDASM  Davis346VerticalBracket.SLDPRT  Davis346VerticalBracket.STL  MirrorBracket.SLDPRT  Plate.SLDPRT  Plate_LaserCut.DXF  Plate_LaserCut.SLDDRW  Plate_LaserCut.cdr
3d_models/Davis346/: DAVIS346.SLDASM  DAVIS346.SLDPRT  DAVIS346_lens.SLDPRT
3d_models/Jackal_IGES_Model/: ArkEnclosure.SLDPRT  Jackal UGV 3D Model.SLDASM  Jackal UGV 3D Model.rpt  Simplified Model Base.sldprt  Simplified Model Fenders.sldprt  Simplified Wheel.sldprt
3d_models/volume-gige-ueye-fa-housed/: UI-5260FA-C-HQ.SLDPRT  volume-gige-ueye-fa-housed.EPRT  volume-gige-ueye-fa-housed.STEP  volume-gige-ueye-fa-housed.x_t
backup/: control.yaml  interfaces.backup  setup.bash.backup
clearpath_scripts/: ros-start  ros-stop
clearpath_services/: ds4drv.service  ros.service
launch/: VLP16_points.launch  hokuyo.launch  navsat.launch  record.launch  um7.launch
meshes/: jackalMount.stl  jackalMount2.stl
ros.d/: VLP16_points.launch  event_camera.launch  hokuyo.launch  navsat.launch  navsat_original.bak  occam.launch  toposens.launch  um7.launch
rules.d/: 41-hokuyo.rules  65-inivation.rules  99-ueyeusbd.rules  occam.rules
rviz/: navigation.rviz
scripts/: ark_commanding_positions.py  explore.py  extract_gps.py  gps_to_gpx.py  imu_quat_to_rpy.py  qut10_envars
src/: tf_to_pose.cpp
urdf/: qut10_jackal_extras.urdf.xacro
